# hs_imc_framework

./: .gitignore  IMC.xml  Messages_template.txt  README.md  hs_imc_framework.cabal  msgs.txt
IMC/IMC/: Base.hs  Maneuvers.hs  Messages.hs  Network.hs
IMC/IMC/Control/: BehaviorTree.hs  Subscribe.hs  Utils.hs
IMC/IMC/Maneuvers/: FollowRef.hs
extractIMC/: Main.hs
followForm/: FollowFormationTree.hs  Main.hs  SendTask.hs  SubTrees.hs
followForm/SubTrees/: Commons.hs  ManageTask.hs  PerformTask.hs  StayInFormation.hs
followSys/: Main.hs
subscribe/: Main.hs
